# deepseek-plugin

./: Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-all.sh
src/: config.rs  lib.rs  plugin.rs
src/api/: client.rs  types.rs
src/history/: mod.rs  processor.rs
