[package]
name = "deepseek-plugin"
version = "0.1.3"
edition = "2021"
description = "DeepSeek AI 对话插件"
authors = ["Augment"]

[lib]
name = "deepseek"
crate-type = ["cdylib"]

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# 引用插件接口库
plugin-interfaces = { git = "https://github.com/luodeb/plugin-interfaces.git" }
